force-app/main/default/objects/Customer_Project__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Customer Projects</relationshipLabel>
    <relationshipName>Customer_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>