force-app/main/default/objects/Customer_Project__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customer Projects</relationshipLabel>
    <relationshipName>Customer_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>